# rayTracing

./: CMakeLists.txt  README.md  image.ppm  main.cpp
docs/: generator.js  index.html  main_style.css  syntax_highlight.css  target.md
headers/: camera.hpp  color3.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main_header.hpp  sphere.hpp  vec3.hpp
src/: main.cpp
src/headers/: color3.hpp  config.hpp  config.json  hittable_list.hpp  main_header.hpp  utils.hpp  vec3.hpp
src/headers/camera/: camera.cpp  camera.hpp
src/headers/color/: color.cpp  color.hpp
src/headers/color3/: color3.cpp  color3.hpp
src/headers/config/: predefined_materials.cpp  predefined_materials.hpp
src/headers/dielectric/: dielectric.hpp
src/headers/engine/: engine.cpp  engine.hpp
src/headers/hit_record/: hit_record.cpp  hit_record.hpp
src/headers/hittable/: hittable.cpp  hittable.hpp
src/headers/hittable_list/: hittable_list.cpp  hittable_list.hpp
src/headers/interval/: interval.cpp  interval.hpp
src/headers/lambertian/: lambertian.hpp
src/headers/material/: material.hpp
src/headers/metal/: metal.hpp
src/headers/ray/: ray.cpp  ray.hpp
src/headers/scene/: scene.cpp  scene.hpp
src/headers/sphere/: sphere.cpp  sphere.hpp
src/headers/vec3/: vec3.cpp  vec3.hpp
src/headers/window_manager/: window_manager.cpp  window_manager.hpp
